--- a/config/database.yml
+++ b/config/database.yml
@@ -25,5 +25,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: stmarket
+  pool: 5
+  username: tyler
+  password:
