--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,15 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-	"proxy": {
+  "proxy": {
     "/api": {
       "target": "http://localhost:3001/"
-		}
-	},
+    }
+  },
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-masonry-component": "^6.2.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
