--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,15 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.1",
+    "bootstrap": "^4.1.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-masonry-component": "^6.2.1",
-    "react-scripts": "1.1.5"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
