--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-masonry-component": "^6.2.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
