--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "bootstrap": "^4.1.1",
+    "jest-cli": "^23.6.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-masonry-component": "^6.2.1",
