--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:3001/"
-    }
-  },
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "bootstrap": "^4.1.1",
@@ -26,5 +21,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+	"proxy": "http://localhost:3001/"
 }
